--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </header>
     <section id="hero" class="hero-section">
         <div class="hero-content">
-            <h1>สวัสดีครับ! ผมชื่อ **นายอนุวัติ**</h1>
+            <h1>สวัสดีครับ! ผมชื่อ **นายอนุวัติ หนูเต็ม**</h1>
             <p>เป็นนักเรียนแผนกเทคโนโลยีธุรกิจดิจิทัล</p>
-            <a href="#" class="btn">ดูผลงานของผม</a>
+            <a href="profileohmmy.html" class="btn">ประวัติของผม</a>
         </div>
     </section>
     <section data-aos="fade-up" id="about" class="about-section">
@@ -67,6 +67,7 @@
         <p>สามารถติดต่อผมได้ที่ : วิทยาลัยเทคนิคสระบุรี</p>
         <p>อีเมล : raung919324@gmail.com</p>
         <p>โทรศัพท์ : 061-112-0844</p>
+        <a href="projectcontact.html" class="btn-small">ติดต่อเพิ่มเติม</a>
     </section>
     <footer class="main-footer">
         <p>&copy; 2025 ZE1MMHO ALL Rights Reserved.</p>
