--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#about">เกี่ยวกับ</a></li>
                 <li><a href="#projrct">ผลงาน</a></li>
                 <li><a href="#contact">ติดต่อ</a></li>
+                <li><a href="index.html#">ประวัติของผม</a></li>
             </ul>
         </nav>
     </header>
