--- a/project2.html
+++ b/project2.html
@@ -17,9 +17,10 @@
         <nav class="navbar">
             <a href="index.html" class="logo">Anuwat</a>
             <ul class="nav-links">
-                <li><a href="#about">เกี่ยวกับ</a></li>
-                <li><a href="#projrct">ผลงาน</a></li>
-                <li><a href="#contact">ติดต่อ</a></li>
+                <li><a href="index.html#about">เกี่ยวกับ</a></li>
+                <li><a href="index.html#projrct">ผลงาน</a></li>
+                <li><a href="index.html#contact">ติดต่อ</a></li>
+                <li><a href="index.html#">ประวัติของผม</a></li>
             </ul>
         </nav>
     </header>
