--- a/projectcontact.html
+++ b/projectcontact.html
@@ -17,9 +17,10 @@
         <nav class="navbar">
             <a href="index.html" class="logo">Anuwat</a>
             <ul class="nav-links">
-                <li><a href="#about">เกี่ยวกับ</a></li>
-                <li><a href="#projrct">ผลงาน</a></li>
-                <li><a href="#contact">ติดต่อ</a></li>
+                <li><a href="index.html#about">เกี่ยวกับ</a></li>
+                <li><a href="index.html#projrct">ผลงาน</a></li>
+                <li><a href="index.html#contact">ติดต่อ</a></li>
+                <li><a href="index.html#">ประวัติของผม</a></li>
             </ul>
         </nav>
     </header>
@@ -57,7 +58,7 @@
                     <input type="tel" name="phone" required>
                 </div>
                 <div style="margin: 5px;">
-                    <label for="contact">ติดต่อเรืื่อง</label>
+                    <label for="contact">ติดต่อเรื่อง</label>
                     <textarea name="contact" rows="4" cols="30"></textarea>
                 </div>
                 <div style="margin: 5px;">
